4.2
 * Cleanup pylint issues with pylexotron.py (CASSANDRA-17779)
 * NPE bug in streaming checking if SSTable is being repaired (CASSANDRA-17801)
 * Users of NativeLibrary should handle lack of JNA appropriately when running in client mode (CASSANDRA-17794)
 * Warn on unknown directories found in system keyspace directory rather than kill node during startup checks (CASSANDRA-17777)
 * Log duplicate rows sharing a partition key found in verify and scrub (CASSANDRA-17789)
 * Add separate thread pool for Secondary Index building so it doesn't block compactions (CASSANDRA-17781)
 * Added JMX call to getSSTableCountPerTWCSBucket for TWCS (CASSANDRA-17774)
 * When doing a host replacement, -Dcassandra.broadcast_interval_ms is used to know when to check the ring but checks that the ring wasn't changed in -Dcassandra.ring_delay_ms, changes to ring delay should not depend on when we publish load stats (CASSANDRA-17776)
 * When bootstrap fails, CassandraRoleManager may attempt to do read queries that fail with "Cannot read from a bootstrapping node", and increments unavailables counters (CASSANDRA-17754)
 * Add guardrail to disallow DROP KEYSPACE commands (CASSANDRA-17767)
 * Remove ephemeral snapshot marker file and introduce a flag to SnapshotManifest (CASSANDRA-16911)
 * Add a virtual table that exposes currently running queries (CASSANDRA-15241)
 * Allow sstableloader to specify table without relying on path (CASSANDRA-16584)
 * Fix TestGossipingPropertyFileSnitch.test_prefer_local_reconnect_on_listen_address (CASSANDRA-17700)
 * Add ByteComparable API (CASSANDRA-6936)
 * Add guardrail for maximum replication factor (CASSANDRA-17500)
 * Increment CQLSH to version 6.2.0 for release 4.2 (CASSANDRA-17646)
 * Adding support to perform certificate based internode authentication (CASSANDRA-17661)
 * Option to disable CDC writes of repaired data (CASSANDRA-17666)